# Bootcamps-DIO

./: .gitignore  README.md
API_TDD/: Makefile  README.md  pyproject.toml
API_TDD/store/controllers/: product.py
API_TDD/store/core/: config.py  exceptions.py
API_TDD/store/db/: mongo.py
API_TDD/tests/fakes/: fake_collection.py
API_TDD/tests/usecases/: test_product.py
Accenture-Python_para_Analise_e_Automacao_de_Dados/: README.md
Accenture-Python_para_Analise_e_Automacao_de_Dados/Deteccao_de_Fraude/: Deteccao_de_Anomalias_em_Transacoes_em_Python.ipynb  README.md
Avanade - Back-end com .NET e IA/Analise_de_Sentimentos_com_LanguageStudio_no_AzureAI/: README.md
Avanade - Back-end com .NET e IA/Desafio_ETL_pipeline/: README.md  etl.py  gpt_service.py
Avanade - Back-end com .NET e IA/Desafio_Tecnico_Avanade/: .gitignore  README.md  docker-compose.yml
Avanade - Back-end com .NET e IA/Minimal_API/: Minimal_API.sln
Avanade - Back-end com .NET e IA/SistemaEstacionamento_V1/: trilha-net-fundamentos-desafio.sln
Avanade - Back-end com .NET e IA/SistemaHotel_V1/: Program.cs  SistemaHotel_V1.sln
Avanade - Back-end com .NET e IA/SistemaSmartphones_V1/: Program.cs  README.md  SistemaSmartphones_V1.sln
Avanade - Back-end com .NET e IA/trilha-net-api-desafio-main/: TrilhaApiDesafio.csproj  appsettings.Development.json  trilha-net-api-desafio-main.sln
Back-End com Python/Dashboard_Excel/: Dashboard_Higor.xlsx  (+1 more)
SistemaBancario/: SistemaBancario_v1.py  SistemaBancario_v2.py  SistemaBancario_v3.py  SistemaBancario_v3_extra.py
workout_API_01/: requirements.txt
(+94 files in other folders)
