[tool.poetry]
name = "api_tdd"
version = "0.0.1"
description = "Fale qualquer coisa aí..."
authors = ["HIS <higor.italo@ufpe.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
motor = "^3.7.1"
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
pre-commit = "^4.3.0"
httpx = "^0.28.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = [
  "--strict-config",
  "--strict-markers",
  "--ignore=docs_src",
]
xfail_strict = true
junit_family = "xunit2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
